# food-diary

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.lambda  Justfile  README-AWS.md  README-LOCAL.md  README.md  cdk.json  cdk_app.py  compose.yaml  deploy.sh  fly.toml  food_diary.db  lambda_handler.py  main.py  pyproject.toml  requirements.txt
.github/: DEPLOYMENT.md
.github/workflows/: deploy.yml
docker/app/: Dockerfile
docker/food-diary/: Dockerfile
docker/localstack/init/: 01-setup-resources.sh
docker/mock-oauth/: Dockerfile  app.py  requirements.txt
docker/nginx/: Dockerfile
docker/playwright/: Dockerfile
docker/tests/: Dockerfile
infrastructure/: Dockerfile.lambda  cdk.json  cdk_app.py
nginx/: generate-certs.sh  nginx.conf
nginx/ssl/: nginx.crt  nginx.key
src/food-diary/: main.py
src/food_diary/: __init__.py  database.py  local_config.py  main.py  s3_storage.py
static/: app.js  manifest.json  service-worker.js  styles.css
static/icons/: README.md  generate-placeholders.py
templates/: index.pug
tests/: compose.yaml  test_main.py
tests/e2e/: test_app.py
